--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "antd": "^5.6.3",
     "axios": "^1.4.0",
     "dva": "^2.6.0-beta.20",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.195"
   }
 }
